# FoodCalorie

./: .gitattributes  .gitignore  Authentication_System_Complete_Guide.md  PROJECT_STRUCTURE_DIAGRAM.md  README.md  SETUP.md  check-environments.bat  debug_result.html  docker-compose.dev.yml  docker-compose.yml  docker-start.bat  integrate-repos.bat  package-lock.json  pyproject.toml  run-backend.bat  run-mlserver.bat  start-all-services.bat  test_csv_reading.py  test_integration.py  test_korean_food_name.py  test_websocket_real.py  test_websocket_simple.py  workspace.code-workspace  음식만개등급화.csv  캘린더_시스템_설명서.md
MLServer/: .env.example  (+3 more)
backend/: .editorconfig  .env  .gitignore  CHALLENGE_ISSUE_SOLUTION.md  README_AI_FEATURES.md  SECURITY_VALIDATION_SUMMARY.md  add_data_simple.py  add_data_to_existing_user.py  add_sample_images.py  challenge_fix_frontend.js  check_meallog.py  check_urls.py  check_users.py  create_demo_data.py  create_dummy_data.py  create_rich_test_account.py  create_rich_test_data.py  create_test_challenges.py  create_test_data.py  create_test_data_simple.py  create_test_user_with_meals.py  debug_challenge_join.py  fix_challenge_issues.py  fix_line_length.py  korean_food_nutri_score_final.csv  management_commands.py  pyproject.toml  requirements.txt  run_auth_tests.py  run_challenge_tests.py  security_cleanup_final.py  security_validation.py  security_validation_report.json  test_ai_coaching.py  test_ai_features.py  test_api.py  test_calendar_api.py  test_delete_meal.py  test_gemini_ai.py  test_logout_api.py  (+6 more)
backend/accounts/: admin.py  apps.py  authentication.py  decorators.py  middleware.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/api_integrated/: admin.py  ai_coach.py  ai_coaching.py  ai_service.py  authentication.py  dashboard_views.py  dashboard_views_backup.py  middleware.py  models.py  permissions.py  recommendation_engine.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py  weight_models.py
backend/api_integrated/challenges/: views.py
backend/api_integrated/migrations/: 0002_alter_meallog_imageurl.py  0003_alter_meallog_nutriscore.py  0003_remove_challengeparticipant_challenge_and_more.py  0004_weightrecord.py
backend/backend_project/: asgi.py  settings.py  urls.py
backend/calender/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/calender/migrations/: 0001_initial.py
backend/challenges/: TEST_GUIDE.md  admin.py  apps.py  cache.py  middleware.py  models.py  optimizations.py  serializers.py  services.py  signals.py  tasks.py  test_authentication.py  test_settings.py  tests.py  urls.py  views.py  views_backup.py
backend/challenges/migrations/: 0001_initial.py  0002_userchallenge_challenge_cutoff_time_and_more.py  (+2 more)
backend/chegam/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/docs/: challenge_api_documentation.md
backend/mlserver/: consumers.py  models.py  routing.py  services.py  tasks.py  urls.py  views.py
(+152 files in other folders)
