[project]
name = "foodcalorie-backend"
version = "0.1.0"
description = "FoodCalorie Backend Django Application"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.0.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "django-cors-headers>=4.0.0",
    "channels>=3.0.0",
    "channels-redis>=4.0.0",
    "django-filter>=23.0.0",
    "faker>=18.0.0",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "django-extensions>=3.2.0",
    "websockets>=11.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "env"
]